Fix lack of whitespace between campaign table border and icon

--- a/css/campaign.css
+++ b/css/campaign.css
@@ -155,18 +155,18 @@ linegraph .axis line {
 /* alter display of parent and child groups in Manage Groups selector */
 /* from civicrm.css: #crm-container .crm-group-parent td.crm-group-name { */
 #crm-container td.crm-campaign-name {
-    padding-left: 20px;
+    padding-left: 30px;
     text-indent: -20px;
 }
 
 /* from civicrm.css: #crm-container .crm-group-child td.crm-group-name.level_2 { */
 #crm-container td.crm-campaign-name.level_2 {
-    padding-left: 40px;
+    padding-left: 50px;
     text-indent: -20px;
 }
 /* from civicrm.css: #crm-container .crm-group-child td.crm-group-name.level_3 { */
 #crm-container td.crm-campaign-name.level_3 {
-    padding-left: 60px;
+    padding-left: 70px;
     text-indent: -20px;
 }
 /* from civicrm.css: #crm-container .crm-group-name span.crm-editable-enabled { */
@@ -205,5 +205,5 @@ linegraph .axis line {
 }
 
 .crm-create-new-list-inner, .crm-create-new-list-inner ul {
-  width: 160px!important;
+  width: 160px !important;
 }
